src/test/deca/codegen/valid/return-constantMethod.deca
class A {
    int method(){
        return 3;
    }
}

{
A a = new A();
println(a.method());
}