src/test/deca/codegen/invalid/return-methodWithoutReturn.deca
class A {
    int method(){
        int a = 3;
    }
}

{
    A a = new A();
    a.method();
}